--- a/App/pom.xml
+++ b/App/pom.xml
@@ -18,28 +18,17 @@
   	<plugins>
   		<plugin>
   			<!-- Build JAR -->
-  			<artifactId>maven-assembly-plugin</artifactId>
-  			<version>3.0.0</version>
-  			<executions>
-      			<execution>
-        			<phase>package</phase>
-        			<goals>
-        				<goal>single</goal>
-        			</goals>
-        		</execution>
-        	</executions>
-
+  			<groupId>org.apache.maven.plugins</groupId>
+  			<artifactId>maven-jar-plugin</artifactId>
+  			<version>2.4</version>
   			<configuration>
-  				<archive>
-  					<manifest>
-  						<addClasspath>true</addClasspath>
-  						<mainClass>Tree.App.App</mainClass>
-  					</manifest>	
-  				</archive>
-  				<descriptorRefs>
-  					<descriptorRef>jar-with-dependencies</descriptorRef>
-  				</descriptorRefs>	
-  			</configuration>
+                <archive>
+                    <index>true</index>
+                    <manifest>
+                        <mainClass>Tree.App.App</mainClass>
+                    </manifest>
+                </archive>
+            </configuration>
   		</plugin>
   	</plugins>
   </build>
